Transforming blended.jms.utils pom to Scala.