@@ -1,97 +1,260 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~ Copyright 2014ff,  https://github.com/woq-blended
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>de.wayofquality.blended</groupId>
-    <artifactId>blended.parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
-    <relativePath>../blended-parent</relativePath>
-  </parent>
-
-  <name>${project.artifactId}</name>
+  <groupId>de.wayofquality.blended</groupId>
   <artifactId>blended.jms.utils</artifactId>
+  <version>2.0-SNAPSHOT</version>
   <packaging>bundle</packaging>
-
+  <name>${project.artifactId}</name>
   <description>
-    A bundle to privide a ConnectionFactory wrapper that monitors a single connection and is able 
-    to monitor the connection via an active ping. 
-  </description>
-  
+A bundle to privide a ConnectionFactory wrapper that monitors a single connection and is able
+to monitor the connection via an active ping.
+    </description>
+  <url>https://github.com/woq-blended/blended</url>
+  <organization>
+    <name>https://github.com/woq-blended</name>
+    <url>https://github.com/woq-blended/blended</url>
+  </organization>
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <name>Andreas Gies</name>
+      <email>andreas@wayofquality.de</email>
+      <organization>WoQ - Way of Quality GmbH</organization>
+      <organizationUrl>http://www.wayofquality.de</organizationUrl>
+    </developer>
+    <developer>
+      <name>Tobias Roeser</name>
+      <email>tobias.roeser@tototec.de</email>
+      <organization>ToToTec GbR</organization>
+    </developer>
+  </developers>
+  <scm>
+    <connection>scm:git:ssh://git@github.com/woq-blended/blended</connection>
+    <developerConnection>scm:git:ssh://git@github.com/woq-blended/blended.git</developerConnection>
+    <url>https://github.com/woq-blended/blended</url>
+  </scm>
   <properties>
-    <bundle.namespace>${project.artifactId}</bundle.namespace>
     <bundle.symbolicName>${project.artifactId}</bundle.symbolicName>
+    <bundle.namespace>${project.artifactId}</bundle.namespace>
   </properties>
-
   <dependencies>
-
     <dependency>
       <groupId>de.wayofquality.blended</groupId>
       <artifactId>blended.domino</artifactId>
-      <version>${blended.version}</version>
+      <version>2.0-SNAPSHOT</version>
+      <optional>false</optional>
     </dependency>
-
     <dependency>
       <groupId>de.wayofquality.blended</groupId>
       <artifactId>blended.mgmt.base</artifactId>
-      <version>${blended.version}</version>
+      <version>2.0-SNAPSHOT</version>
+      <optional>false</optional>
     </dependency>
-
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
+      <version>2.11.8</version>
+      <optional>false</optional>
     </dependency>
-
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jms</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.3</version>
+      <optional>false</optional>
     </dependency>
-
     <dependency>
       <groupId>de.wayofquality.blended</groupId>
       <artifactId>blended.akka</artifactId>
-      <version>${project.version}</version>
+      <version>2.0-SNAPSHOT</version>
+      <optional>false</optional>
     </dependency>
-
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-jms_1.1_spec</artifactId>
       <version>1.1.1</version>
+      <optional>false</optional>
     </dependency>
-
   </dependencies>
-
+  <repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+      <id>FUSEStaging</id>
+      <url>http://repo.fusesource.com/nexus/content/repositories/jboss-fuse-6.1.x</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+      <id>SpringBundles</id>
+      <url>http://repository.springsource.com/maven/bundles/release</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>warn</checksumPolicy>
+      </snapshots>
+      <id>SpringExternalBundles</id>
+      <url>http://repository.springsource.com/maven/bundles/external</url>
+    </repository>
+  </repositories>
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
+        <version>3.0.1</version>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <id>manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+            <inherited>true</inherited>
+          </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>biz.aQute.bndlib</artifactId>
+            <version>3.2.0</version>
+            <optional>false</optional>
+          </dependency>
+        </dependencies>
+        <inherited>true</inherited>
+        <configuration>
+          <supportedProjectTypes>
+            <supportedProjectType>jar</supportedProjectType>
+            <supportedProjectType>bundle</supportedProjectType>
+            <supportedProjectType>war</supportedProjectType>
+          </supportedProjectTypes>
+          <instructions>
+            <_include>osgi.bnd</_include>
+          </instructions>
+        </configuration>
       </plugin>
-
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
+        <version>3.2.1</version>
+        <extensions>false</extensions>
+        <executions>
+          <execution>
+            <id>compile-scala</id>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+            <inherited>true</inherited>
+            <configuration>
+              <fork>true</fork>
+              <recompileMode>incremental</recompileMode>
+              <useZincServer>true</useZincServer>
+              <addJavacArgs>-target|${java.version}|-source|${java.version}</addJavacArgs>
+              <addZincArgs>-C-target|-C${java.version}|-C-source|-C${java.version}</addZincArgs>
+              <args>
+                <arg>-deprecation</arg>
+                <arg>-feature</arg>
+                <arg>-Xlint</arg>
+                <arg>-Ywarn-nullary-override</arg>
+              </args>
+              <jvmArgs>
+                <jvmArg>-Xms256m</jvmArg>
+                <jvmArg>-Xmx512m</jvmArg>
+                <jvmArg>-XX:MaxPermSize=128m</jvmArg>
+              </jvmArgs>
+            </configuration>
+          </execution>
+          <execution>
+            <id>test-compile-scala</id>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+            <inherited>true</inherited>
+            <configuration>
+              <fork>true</fork>
+              <recompileMode>incremental</recompileMode>
+              <useZincServer>true</useZincServer>
+              <addJavacArgs>-target|${java.version}|-source|${java.version}</addJavacArgs>
+              <addZincArgs>-C-target|-C${java.version}|-C-source|-C${java.version}</addZincArgs>
+              <args>
+                <arg>-deprecation</arg>
+                <arg>-feature</arg>
+                <arg>-Xlint</arg>
+                <arg>-Ywarn-nullary-override</arg>
+              </args>
+              <jvmArgs>
+                <jvmArg>-Xms256m</jvmArg>
+                <jvmArg>-Xmx512m</jvmArg>
+                <jvmArg>-XX:MaxPermSize=128m</jvmArg>
+              </jvmArgs>
+            </configuration>
+          </execution>
+        </executions>
+        <inherited>true</inherited>
+        <configuration>
+          <scalaVersion>${scala.version}.${scala.micro.version}</scalaVersion>
+        </configuration>
       </plugin>
     </plugins>
   </build>
-
+  <profiles>
+    <profile>
+      <id>gen-pom</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.takari.polyglot</groupId>
+            <artifactId>polyglot-translate-plugin</artifactId>
+            <version>0.1.15</version>
+            <extensions>false</extensions>
+            <executions>
+              <execution>
+                <id>generate-pom.xml</id>
+                <phase>validate</phase>
+                <goals>
+                  <goal>translate</goal>
+                </goals>
+                <inherited>true</inherited>
+                <configuration>
+                  <input>pom.scala</input>
+                  <output>pom.xml</output>
+                </configuration>
+              </execution>
+            </executions>
+            <inherited>true</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
-
